:bug: Fixes homework on students page on mobile

--- a/src/components/BackToHomePageButton/BackToHomePageButton.scss
+++ b/src/components/BackToHomePageButton/BackToHomePageButton.scss
@@ -1,14 +1,17 @@
 @import "../../styles/Colors";
 
 .back-to-home-page-button {
-    display: inline-block;
+    display: block;
 
     position: fixed;
     bottom: 1rem;
     right: 1.5rem;
 
+    width: fit-content;
+    height: fit-content;
+
     font-size: 1.3rem;
-    Padding: 0.8rem;
+    padding: 0.8rem;
 
     border: 2px solid $color-800;
     border-radius: 10px;
@@ -18,6 +21,13 @@
 
     transition: all 400ms ease-in-out;
     cursor: pointer;
+
+    &.relative {
+        position: relative;
+
+        margin: 1rem auto 0 auto;
+        transform: translateX(12.5%);  // just reasons (it works)
+    }
 
     &:hover {
         color: $color-50;
